แก้ไข UI ระบบค้นหาอุปกรณ์ - close #156
