# backend/docs/swagger.json
@@ -736,54 +736,6 @@
                 }
             }
         },
-        "/equipmentbyemployees/{id}": {
-            "get": {
-                "description": "get GetEquipmentbyEmployee by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get a GetEquipmentbyEmployee entity by ID",
-                "operationId": "get-GetEquipmentbyEmployee",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "GetEquipmentbyEmployee ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/ent.Equipment"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            }
-        },
         "/equipmentrentalbymembers/{id}": {
             "get": {
                 "description": "get GetEquipmentrentalbyMember by ID",
